k8s/account-service/db/db.yaml
# Service가 잘 붙었는지 확인해보려면 describe해서 Endpoints를 확인하고 내 목적 Pod의 ip와 일치하는지 보면 된다.
apiVersion: v1
kind: Service
metadata:
  name: account-service-db-svc
  labels:
    app: account-service
spec:
  ports:
  - port: 5432 # target port를 정의하지 않으면 port그대로 적용됨
    name: pg-default
  clusterIP: None # headless
  selector:
    app: account-service
    role: db
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: account-service-db-ss
  labels:
    app: account-service
spec:
  selector:
    matchLabels:
      app: account-service # has to match .spec.template.metadata.labels
  serviceName: "account-service-db-svc"
  replicas: 1 # default
  minReadySeconds: 10 # default is 0
  template:
    metadata:
      labels:
        app: account-service
        role: db 
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: pg
        image: postgres
        ports:
        - containerPort: 5432
          name: pg-default
        volumeMounts:
        - name: account-service-db-data
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: account-service-db-data
    spec:
      accessModes:
      - ReadWriteOncePod
      storageClassName: "local-storage"
      resources:
        requests:
          storage: 1Gi
