k8s/account-service/db/db.networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: account-service-db-networkpolicy
  labels:
    app: account-service
spec:
  podSelector:
    matchLabels:
      app: account-service
      role: db
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: account-service
          role: server
    ports:
    - protocol: TCP
      port: 5432
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: account-service
          role: server
    ports:
    - protocol: TCP
      port: 8080
